# gitp

./: .gitignore  Cargo.toml  README.md  project-plan.md
src/: cli.rs  main.rs
src/commands/: current.rs  edit.rs  export.rs  import.rs  list.rs  mod.rs  new.rs  remove.rs  rename.rs  show.rs  ssh_key.rs  use_profile.rs
src/config/: mod.rs  profile.rs  storage.rs
src/credentials/: keyring.rs  mod.rs
src/git/: mod.rs
src/ssh/: ssh_config.rs
