[package]
name = "gitp"
version = "0.1.0"
edition = "2021"
authors = ["Varun V<varunvirupaksha321@gmail.com>"]
description = "A fast git profile switcher with SSH and HTTPS support"
repository = "https://github.com/created-by-varun/gitp"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["git", "profile", "ssh", "cli", "switcher"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "gitp"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
git2 = "0.18"
dirs = "5.0"
colored = "2.1"
dialoguer = "0.11"
thiserror = "1.0"
anyhow = "1.0"

# Optional dependencies for future phases
# keyring = { version = "2.0", optional = true }
# ssh2 = { version = "0.9", optional = true }

[dev-dependencies]
tempfile = "3.10"
assert_cmd = "2.0"
predicates = "3.1"
serial_test = "3.0"  # For tests that need to run serially

[features]
default = []
# Future feature flags
# ssh-agent = ["ssh2"]
# credentials = ["keyring"]

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1

[profile.dev]
opt-level = 0

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }.tar.gz"
pkg-fmt = "tgz"